# pygrowup_cdc_calculator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cdc_data/: Untitled.ipynb
examples/: usage_examples.py
pygrowup_cdc_calculator/: __init__.py  cdc_growth_calculator.py  medical_growth_calculator.py
pygrowup_cdc_calculator/cdc_data/: bmiagerev_clean.csv
tests/: __init__.py  test_cdc_calculator.py
