[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrowup-cdc-calculator"
version = "0.1.0"
description = "Growth calculator integrating WHO (pygrowup2) and CDC standards for z-scores and percentiles"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Frederick Gyasi", email = "gyasi@musc.edu"}
]
maintainers = [
    {name = "Frederick Gyasi", email = "gyasi@musc.edu"}
]
keywords = [
    "pediatrics",
    "growth",
    "cdc",
    "who",
    "z-score",
    "percentile",
    "anthropometry",
    "medical",
    "health"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
who = ["pygrowup2"]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "isort",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/gyasifred/pygrowup_cdc_calculator"
Documentation = "https://github.com/gyasifred/pygrowup_cdc_calculator#readme"
Repository = "https://github.com/gyasifred/pygrowup_cdc_calculator"
Issues = "https://github.com/gyasifred/pygrowup_cdc_calculator/issues"

[tool.setuptools]
packages = ["pygrowup_cdc_calculator"]
include-package-data = true

[tool.setuptools.package-data]
pygrowup_cdc_calculator = ["cdc_data/*.csv"]

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=pygrowup_cdc_calculator --cov-report=term-missing"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
